--- a/pingpong.html
+++ b/pingpong.html
@@ -79,9 +79,9 @@
 	.team2{
         font-size: 250%;
         text-align:right;
-		width:82%;
+		
 		padding: 20px;
-        float: left;
+        float: right;
     }
     .bottom{
         width:18%;
@@ -92,6 +92,7 @@
         padding: 20px;
     }
     .ser2{
+        float: right;
         text-align:right;
         padding: 20px;
     }
@@ -105,6 +106,14 @@
         font-size: 400%;
         padding: 0px;
         margin: 0px;
+    }
+    .loptica{
+        width:50px;
+        height: 50px;
+        background-color: #fff;
+        border-radius: 50%;
+        margin-bottom:100px;
+
     }
     .hidden{
         display: none;
@@ -127,8 +136,8 @@
         <div class="col _1"><div class="match2" id="match2">0</div><div class="team2" id="klub2">Team 2</div></div>
     </div>
     <div class="row">
-        <div class="col score"><div class="names1" id="team1">Jupek<br>Mamić</div><div class="set1" id="set1">0</div><div class="game" id="game1">0</div><div class="ser1" id="ser1">servis</div></div>
-        <div class="col _1 score"><div class="names2" id="team2">Bulić<br>Demonjić</div><div class="set2" id="set2">0</div><div class="game" id="game2">0</div><div class="ser2" id="ser2">servis</div></div>
+        <div class="col score"><div class="names1" id="team1">Jupek<br>Mamić</div><div class="set1" id="set1">0</div><div class="game" id="game1">0</div><div class="ser1" id="ser1"><div class ="loptica"></div></div></div>
+        <div class="col _1 score"><div class="names2" id="team2">Bulić<br>Demonjić</div><div class="set2" id="set2">0</div><div class="game" id="game2">0</div><div class="ser2" id="ser2"><div class ="loptica"></div></div></div>
     </div>
     <div class="row">
         <div class="col bottom"><div class="teams" id="TO1">Timeout</div></div>
